# CLBL

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  ambi__fn__obj__ptr__wrapper_8h.html  ambi__fn__obj__wrapper_8h.html  apply__qualifiers_8h.html  apply__qualifiers_8h.js  apply_qualifiers_8cpp-example.html  args_8h.html  can__dereference_8h.html  casted__fn__obj__ptr__wrapper_8h.html  casted__fn__obj__wrapper_8h.html  cgenw2y0.1ak.txt  clbl_8h.html  convert__to_8h.html  cv_8h.html  dir_78c608e20d0b90f7b491331ae42b401f.html  dir_b56f955d4a5fbca9f465c0e926755ec6.html  dir_b628662f834524f5271b5df3898b21de.html  dir_b628662f834524f5271b5df3898b21de.js  dir_f1a0b28dc2f6323e3f93faac115e6583.html  doxygen.css  emulates_8h.html  example_2clbl_pmfwrap_8cpp-example.html  example_2fwrap_free_function_pointer_8cpp-example.html  example_2fwrap_function_object_8cpp-example.html  example_2fwrap_member_function_pointer_8cpp-example.html  examples.html  files.html  forward_8h.html  forwardable_8h.html  forwarding__glue_8h.html  free__fn__wrapper_8h.html  free__function_8h.html  function__object_8h.html  fwrap_8h.html  fwrap_free_function_pointer_8cpp-example.html  globals.html  globals_defs.html  (+44 more)
benchmark/: CMakeLists.txt
benchmarks/: runtime.cpp
cmake/: CheckCxxCompilerSupport.cmake  FindLcov.cmake  FindValgrind.cmake  wandbox.py
doc/: Doxyfile.in  footer.html  header.html  layout.xml  tutorial.h  tutorial.hpp
doc/html/: ambi__fn__obj__ptr__wrapper_8h.html  ambi__fn__obj__wrapper_8h.html  apply__qualifiers_8h.html  args_8h.html  can__dereference_8h.html  casted__fn__obj__ptr__wrapper_8h.html  casted__fn__obj__wrapper_8h.html  clbl_8h.html  convert__to_8h.html  cv_8h.html  dir_78c608e20d0b90f7b491331ae42b401f.html  dir_b56f955d4a5fbca9f465c0e926755ec6.html  dir_b56f955d4a5fbca9f465c0e926755ec6.js  dir_b628662f834524f5271b5df3898b21de.html  dir_f1a0b28dc2f6323e3f93faac115e6583.html  dir_f1a0b28dc2f6323e3f93faac115e6583.js  emulates_8h.html  files.html  files.js  forward_8h.html  forwardable_8h.html  forwarding__glue_8h.html  free__fn__wrapper_8h.html  free__function_8h.html  function__object_8h.html  fwrap_8h.html  fwrap_8h.js  globals.html  globals_defs.html  group__cv-correctness.html  group__ffwrapping.html  group__fowrapping.html  group__harden.html  group__mfwrapping.html  harden_8h.html  harden_8h.js  harden__cast_8h.html  has__normal__call__operator_8h.html  index.html  invocation__copy_8h.html  (+22 more)
doc/html/search/: all_1.js  all_4.js  all_b.js  (+7 more)
example/: CMakeLists.txt  apply_qualifiers.cpp  can_call.cpp  clbl_pmfwrap.cpp  convert_to.cpp  cv_correctness.cpp  cv_correctness_intro.cpp  fwrap_free_function_pointer.cpp  fwrap_function_object.cpp  fwrap_member_function_pointer.cpp  harden.cpp  intro.cpp  template_pmfs.cpp
include/CLBL/: abominable_function_decay.h  apply_qualifiers.h  args.h  args.hpp  arity.hpp  callable.h  can_call_with.hpp  can_dereference.h  can_dereference.hpp  clbl.h  clbl.hpp  constraints.h  constraints.hpp  convert_to.h  convert_to.hpp  core.hpp  cv.h  cv_checks.h  cv_of.h  cv_of.hpp  dereferenceable_object.hpp  dispatch.h  emulates.h  emulates.hpp  forward.h  forward.hpp  forwardable.h  forwarding_glue.h  forwarding_glue.hpp  free_function.h  func.h  function_object.h  fwrap.h  fwrap.hpp  fwrap_constraints.h  generalize.hpp  generalized_object.hpp  harden.h  harden.hpp  harden_cast.h  (+37 more)
include/quali/: can_dereference.hpp  cast.hpp  cv_of.hpp  dereferenceable_object.hpp  flags.hpp  generalize.hpp  generalized_object.hpp  lexical_flag_map.hpp  quali.hpp  quali_macros.hpp  quali_macros_undef.hpp  qualified_type.hpp  ref_of.hpp
scripts/: LLVM-vs2014-x64.bat
scripts/internal/: LLVM-vs2014.bat
search/: all_0.js  all_1.js  all_2.js  all_5.js  all_7.js  all_8.js  all_e.js  files_2.js  files_8.js  groups_0.js  namespaces_0.js  search.css  searchdata.js  variables_0.js  variables_1.js  variables_2.js
test/: CMakeLists.txt  ambiguous_function_object_wrapper.cpp  arity.cpp  can_call_with.cpp  cv_correctness.cpp  dereferenceable_object.cpp  dispatch.cpp  forward_transparency.cpp  generalized_object_type.cpp  std_function_conversion_reference.cpp  unique_ptr.cpp
test/bind/: placeholder_sorting.cpp  simple_binds.cpp
test/factory/: function_ptr_wrapper_factory.cpp
test/fast/: binding_wrapper_tests.cpp  const_int_tests.cpp  const_void_tests.cpp  const_volatile_int_char_tests.cpp  constable_int_char_tests.cpp  constable_int_tests.cpp  constable_void_tests.cpp  cv_tests.cpp  forwarding_tests.cpp  function_reference_tests.cpp  int_tests.cpp  overload_tests.cpp  pmf_tests.cpp  reference_arg_tests.cpp  shared_ptr_tests.cpp  unbound_pmf_tests.cpp  unique_ptr_tests.cpp  value_tests.cpp  void_tests.cpp  volatile_int_char_tests.cpp  volatile_void_tests.cpp  wrapper_copy_tests.cpp
test/include/: int_char_definitions.hpp  int_definitions.hpp  test.hpp  void_definitions.hpp
test/quali/: dereferenceable_object.cpp  flag_checks.cpp  generalized_object_type.cpp  quali.cpp  quali_macros.cpp  quali_macros_undef.cpp  qualified_type.cpp
tests/: const_int_char_tests.cpp  const_int_tests.cpp  const_void_tests.cpp  const_volatile_int_char_tests.cpp  constable_int_char_tests.cpp  constable_int_tests.cpp  constable_void_tests.cpp  conversion_tests.cpp  cv_tests.cpp  forwarding_tests.cpp  function_reference_tests.cpp  int_char_definitions.h  int_char_tests.cpp  int_tests.cpp  main.cpp  overload_tests.cpp  pmfwrap_tests.cpp  reference_arg_tests.cpp  reference_tests.cpp  shared_ptr_tests.cpp  test.h  unique_ptr_tests.cpp  value_tests.cpp  void_definitions.h  void_tests.cpp  volatile_int_char_tests.cpp  volatile_void_tests.cpp
tests/factory/: function_ptr_wrapper_factory.cpp
tests/fast/: binding_wrapper_tests.cpp  const_volatile_int_char_tests.cpp  constable_int_tests.cpp  forwarding_tests.cpp  pmf_tests.cpp  reference_transparency_tests.cpp  value_tests.cpp  wrapper_copy_tests.cpp
tests/include/: int_char_definitions.h  int_definitions.h  test.h  test_utilities.h  void_definitions.h
tests/old/: const_int_tests.cpp  pmf_tests.cpp  shared_ptr_tests.cpp  unbound_pmf_tests.cpp
(+105 files in other folders)
